--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="font-serif">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/logo-El-Palomar-FIilms-symbol.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
