issues has been resolved and working more

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="font-serif">
+<html lang="en" class="font-serif scroll-smooth">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logo-El-Palomar-FIilms-symbol.svg" />
